# QCDesigner

./: .gitignore  Cargo.toml  README.md
src/: app.rs  assets.rs  main.rs
src/components/: add_gate_button.rs  gate_button.rs  latex_label.rs  measured_element.rs  mod.rs  scroll_center.rs  svg_element.rs
src/models/: app_settings.rs  circuit.rs  gate.rs  mod.rs  render_settings.rs
src/utils/: constants.rs  coordinate.rs  defaults.rs  dimensions.rs  gate_id.rs  gate_type.rs  latex_renderer.rs  measured_width_element.rs  mod.rs  svg_store.rs
src/views/: circuit_settings_view.rs  circuit_view.rs  gate_selector_view.rs  gate_settings_view.rs  mod.rs  root_view.rs
