[package]
name = "QCDesigner"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "*" }
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
core-text = "=21.0.0"
anyhow = "1.0.100"
base64 = "0.22"      # Encodes SVG for GPUI
typst = "0.14.2"
typst-svg = "0.14.2"
typst-render = "0.14.2"
comemo = "0.4"
time = "0.3"
tex2typst-rs = "0.4.1"